Remove Depreciations